--- a/patient/forgotPass.html
+++ b/patient/forgotPass.html
@@ -1,5 +1,6 @@
+<!-- Dynamic approach to change content -->
 
-    <div class="form" id="displayPass">
+    <!-- <div class="form" id="displayPass">
         <img class="opacity img-fluid" src="./images/7768657_3763028.jpg" alt="">
         <div class="width"> 
             <div class="background">
@@ -11,13 +12,78 @@
                 <i class="fa-regular fa-circle-user icon"></i>
             </div>
             <div class="mb-4 input">
-                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Password">
-                <i class="fa-regular fa-eye icon"></i>
-            </div>
             <button type="button" class="btn2 mb-3">Reset Password</button>
             <a href="#" class="mb-3 pass" style="font-size: 17px; font-weight: 600;display:flex; justify-content: center;" id="back"><span><i
                 class="fa-solid fa-less-than" style="color: rgb(23, 200, 245); padding-right: 5px;"></i></span>  Back To Login</a>
         </div>
         </div>
+    </div> -->
+
+
+
+
+
+    <!-- Redirect page -->
+
+
+    <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="./css/login.css">
+    <script src="./js/login.js" defer></script>
+</head>
+
+<body>
+    <div class="container-fluid flex" id="wrapper">
+        <!-- header -->
+        <div class="button">
+            <img src="./images/Fig1. Platform login page.jpg" alt="" width="300px">
+            <button class="btn1"><i class="fas fa-light fa-moon" style="color: #43bcf9;"></i></i></button>
+
+        </div>
+        <!-- header -->
+
+
+        <!-- content -->      
+ <div class="form" id="displayPass">
+        <img class="opacity img-fluid" src="./images/7768657_3763028.jpg" alt="">
+        <div class="width"> 
+            <div class="background">
+            <a href="#" class="mb-3 link" style="font-size: 17px; font-weight: 600;"><span><i
+                        class="fa-solid fa-less-than" style="color: rgb(23, 200, 245)"></i></span>  Back</a>
+            <p class="d-flex justify-content-center mb-5 font">Reset Your Password</p>
+            <div class="mb-4 input">
+                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Username">
+                <i class="fa-regular fa-circle-user icon"></i>
+            </div>
+            <button type="button" class="btn2 mb-3">Reset Password</button>
+            <a href="http://127.0.0.1:5500/patient/login.html#" class="mb-3 pass" style="font-size: 17px; font-weight: 600;display:flex; justify-content: center;" id="back"><span><i
+                class="fa-solid fa-less-than" style="color: rgb(23, 200, 245); padding-right: 5px;"></i></span>  Back To Login</a>
+        </div>
+        </div>
     </div>
+        <!-- content -->
+
+        <!-- footer -->
+        <div class="d-flex justify-content-center footer">
+            <p class="size">Terms of Conditions | Privacy Policy</p>
+        </div>
+        <!-- footer -->
+    </div>
+
+</body>
+
+</html>
+
 
