--- a/patient/submitReq.html
+++ b/patient/submitReq.html
@@ -33,7 +33,7 @@
             </div>
 
             <div class="options d-flex flex-column align-items-center" style="width: 100%;">
-                <button type="button" class="mt-3 btn3 patient-btn"><span class="position">PATIENT</span></button>
+               <a href=""><button type="button" class="mt-3 btn3 patient-btn"><span class="position">PATIENT</span></button></a> 
                 <button type="button" class="mt-3 btn3 relation-btn"><span class="position">FAMILY/FRIEND</span></button>
                 <button type="button" class="mt-3 btn3 concierge-btn"><span class="position">CONCIERGE</span></button>
                 <button type="button" class="mt-3 btn3 partner-btn"><span class="position">BUSINESS PARTNERS</span></button>
